tweak bg contrast fix page titles

--- a/static/css/simple.css
+++ b/static/css/simple.css
@@ -9,9 +9,9 @@
     /* Default (light) theme */
     --bg: #f9f9f5;
     --accent-bg: #ecc8c3;
-    --header-bg: #c15748;
-    --header-hover: var(--bg);
-    --header-text: var(--bg);
+    --header-bg: #ab4a38;
+    --header-hover: var(--header-text);
+    --header-text: #fff;
     --text: #212121;
     --text-light: #585858;
     --border: #dedede;
@@ -29,7 +29,7 @@
     :root {
       color-scheme: dark;
       --bg: #1c1c1c;
-      --header-bg: #83362c;
+      --header-bg: #8a3024;
       --accent-bg: #2b2b2b;
       --header-hover: var(--header-text);
       --header-text: #f9f9f5;
